# zstd-c2rust

./: .gitignore  Cargo.toml  convert.sh
src/: common.rs  compress.rs  decompress.rs  dict_builder.rs  legacy.rs  lib.rs
src/common/: debug.rs  entropy_common.rs  error_private.rs  fse_decompress.rs  pool.rs  threading.rs  xxhash.rs  zstd_common.rs
src/compress/: fse_compress.rs  hist.rs  huf_compress.rs  zstd_compress.rs  zstd_compress_literals.rs  zstd_compress_sequences.rs  zstd_compress_superblock.rs  zstd_double_fast.rs  zstd_fast.rs  zstd_lazy.rs  zstd_ldm.rs  zstd_opt.rs  zstdmt_compress.rs
src/decompress/: huf_decompress.rs  zstd_ddict.rs  zstd_decompress.rs  zstd_decompress_block.rs
src/dict_builder/: cover.rs  divsufsort.rs  fastcover.rs  zdict.rs
src/legacy/: zstd_v01.rs  zstd_v02.rs  zstd_v03.rs  zstd_v04.rs  zstd_v05.rs  zstd_v06.rs  zstd_v07.rs
src/programs/: benchfn.rs  benchzstd.rs  datagen.rs  dibio.rs  fileio.rs  fileio_asyncio.rs  timefn.rs  util.rs  zstdcli.rs  zstdcli_trace.rs
