[package]
name = "zstd-c2rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
c2rust-bitfields = { version = "0.17.0", features = ["no_std"] }
libc = { version = "0.2.142", default-features = false }
